--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   border: 3px solid #000;
-  background-image: url('basic-panda.png');
+  background-image: url('assets/basic-panda.png');
   background-size: 80%;
   background-position: center;
   background-repeat: no-repeat;
