--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .loading-container {
@@ -31,7 +32,6 @@
 }
 
 .welcome-message {
-  width: 100%;
   font-size: 18px;
   font-weight: bold;
   text-align: left;
@@ -40,7 +40,7 @@
 
 .button-row {
   font-size: 18px;
-  margin-bottom: 20px;
+  text-align: center;
   padding: 20px;
   background-color: #f0f0f0;
 }
